--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,15 @@
       </plugins>
     </pluginManagement>
     <plugins>
-      <plugin>
+        <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <version>2.8.2</version>
+              <configuration>
+                  <!-- Configuration spécifique si nécessaire -->
+              </configuration>
+          </plugin>
+        <plugin>
         <!-- Build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
