--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
   <distributionManagement>
     <repository>
         <id>nexus-releases</id>
-        <url>http://localhost:8081/repository/maven-nexus-repo/</url>
+        <url>http://nexus:8081/repository/maven-nexus-repo/</url>
     </repository>
     <snapshotRepository>
         <id>nexus-snapshots</id>
-        <url>http://localhost:8081/repository/maven-snapshots/</url>
+        <url>http://nexus:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
   <dependencies>
